# pyAutoTradingBot

./: .gitignore  README.md  clean_notebooks.bat  clean_notebooks.sh  import_csv_from_profit_chart.bat  pyproject.toml  requirements.linux.txt  requirements.txt  requirements.windows.txt  rerun_scenarios.bat  rerun_scenarios.sh  run_notebooks.bat  run_notebooks.sh  run_scenarios.bat  run_scenarios.sh  run_server.bat  run_server.sh  run_server_profiler.bat  start_notebooks.bat  start_notebooks.sh  summarize_scenarios.sh
models/strategies/B3/WDOL/02.candle_strategy/: .env_example  02.candle_strategy_0100_create_dataframe.ipynb  02.candle_strategy_0200_create_xgbooster.ipynb  02.candle_strategy_0300_find_decision_boundary.ipynb  02.candle_strategy_0400_forward_testing.ipynb  02.candle_strategy_0500_check_predict.ipynb  02.candle_strategy_0600_analyse_test_trades.ipynb
pyautotrader/: __main__.py
pyautotrader/models/: migration.py
pyautotrader/server/: parameters.py  predict.py  server.py
pyautotrader/server/test/: test_get_parameters.bat
pyautotrader/server/value_objects/: __init__.py
pyautotrader/utils/: generate_pnl_charts.py
pyautotrader/utils/data_import/: import_data_from_csv.py  import_data_from_profit_chart_into_metatrader.py
pyautotrader/utils/model_export/: export_model_python.py
pyautotrader/utils/run_scenarios/: run_scenarios.py
src/: import_from_profit_chart_to_test.bat
src/pyautotrader/: __main__.py
src/pyautotrader/models/: __init__.py  migration.py
src/pyautotrader/models/entities/: __init__.py
src/pyautotrader/server/: __init__.py  args.py  parameters.py  predict.py  server.py
src/pyautotrader/server/model/: post_value_objects.py
src/pyautotrader/server/test/: run_get_predict.bat  run_post_quote_test.bat  test_quote_post.json
src/pyautotrader/test/: test_ast.py
src/pyautotrader/utils/: gerar_scenaries.py
src/pyautotrader/utils/data_import/: __init__.py  aggregate_data_from_csv.py  import_data_from_csv.py  import_data_from_profit_chart_into_metatrader.py
src/pyautotrader/utils/model_export/: __init__.py  create_ast_from_xgboost_dump.py  export_model_profitchart.py  export_model_python.py
src/pyautotrader/utils/run_scenarios/: __init__.py  rerun_scenarios.py  run_scenarios.py
src/strategies/B3.WDOL/00.data/hyperparameters/: WDO.5Min.100.50.hyperparameters_long.xlsx  WDO.5Min.100.50.hyperparameters_short.xlsx  (+4 more)
src/strategies/B3.WDOL/02.candle_strategy/: 02.candle_strategy_0100_create_dataframe.ipynb  02.candle_strategy_01_create_dataframe.ipynb  02.candle_strategy_0200_create_xgbooster.ipynb  02.candle_strategy_0300_find_decision_boundary.ipynb  02.candle_strategy_03_backtest.ipynb  02.candle_strategy_03_find_decision_boundary.ipynb  02.candle_strategy_040.0_forward_testing.ipynb  02.candle_strategy_0400_forward_testing.ipynb  02.candle_strategy_create_dataframe.ipynb  02.candle_strategy_create_xgbooster.ipynb
src/strategies/open_trade/notebooks/: open_trade_import_data.ipynb
utils/: generate_pnl_charts.py  gerar_scenaries.py  import_data_from_profit.py  select_features.py  summarize_features.py
(+50 files in other folders)
