[tool.poetry]
name = "216"
version = "0.0.1"
description = "pyAutoTrader"
authors = ["Guilherme Bencke <gbencke@benckesoftware.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
ansicolor = "0.3.2"
ansiwrap = "0.8.4"
anyio = "3.4.0"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asgiref = "3.5.0"
astroid = "2.14.2"
attrs = "21.2.0"
autopep8 = "2.0.2"
babel = "2.9.1"
backcall = "0.2.0"
black = "21.12b0"
bleach = "4.1.0"
blindspin = "2.0.1"
bokeh = "2.4.2"
certifi = "2021.10.8"
cffi = "1.15.0"
chardet = "5.1.0"
charset-normalizer = "2.0.9"
click = "8.0.3"
colorama = "0.4.6"
configparser = "5.3.0"
contourpy = "1.1.0"
crayons = "0.4.0"
cryptography = "39.0.1"
cycler = "0.11.0"
cython = "0.29.33"
debugpy = "1.5.1"
decorator = "5.1.0"
defusedxml = "0.7.1"
dill = "0.3.6"
distlib = "0.3.6"
entrypoints = "0.3"
et-xmlfile = "1.1.0"
fastapi = "0.75.0"
filelock = "3.9.0"
flake8 = "6.0.0"
fonttools = "4.28.5"
greenlet = "2.0.2"
h11 = "0.13.0"
idna = "3.3"
ipykernel = "6.6.0"
ipython = "7.30.1"
ipython-genutils = "0.2.0"
isort = "5.12.0"
jedi = "0.18.1"
jinja2 = "3.0.3"
joblib = "1.3.1"
json5 = "0.9.6"
jsonschema = "4.3.2"
jupyter-client = "7.1.0"
jupyter-core = "4.9.1"
jupyter-server = "1.13.1"
jupyterlab = "3.2.5"
jupyterlab-pygments = "0.1.2"
jupyterlab-server = "2.10.1"
kiwisolver = "1.3.2"
lazy-object-proxy = "1.9.0"
lxml = "4.9.2"
markupsafe = "2.0.1"
matplotlib = "3.7.2"
matplotlib-inline = "0.1.3"
mccabe = "0.7.0"
mistune = "0.8.4"
msgpack = "1.0.3"
mypy-extensions = "0.4.3"
nbclassic = "0.3.4"
nbclient = "0.5.9"
nbconvert = "6.3.0"
nbformat = "5.1.3"
neovim = "0.3.1"
nest-asyncio = "1.5.4"
notebook = "6.4.6"
numpy = "1.25.1"
openpyxl = "3.0.9"
packaging = "21.3"
pandas = "2.0.3"
pandas-ta = "0.3.14b0"
pandocfilters = "1.5.0"
papermill = "2.3.3"
parso = "0.8.3"
pathspec = "0.9.0"
pexpect = "4.8.0"
pick = "2.2.0"
pickleshare = "0.7.5"
pillow = "8.4.0"
platformdirs = "2.4.1"
ply = "3.11"
pmm = "0.5.0"
prometheus-client = "0.12.0"
prompt-toolkit = "3.0.24"
ptyprocess = "0.7.0"
pycodestyle = "2.10.0"
pycparser = "2.21"
pydantic = "1.9.0"
pyflakes = "3.0.1"
pygments = "2.10.0"
pylint = "2.16.3"
pynvim = "0.4.3"
pyparsing = "3.0.6"
pyrsistent = "0.18.0"
python-dateutil = "2.8.2"
pytz = "2021.3"
pyyaml = "6.0"
pyzmq = "25.1.0"
ranger-fm = "1.9.3"
requests = "2.26.0"
scikit-learn = "1.3.0"
scipy = "1.11.1"
seaborn = "0.12.2"
send2trash = "1.8.0"
six = "1.16.0"
sniffio = "1.2.0"
sqlalchemy = "2.0.7"
starlette = "0.17.1"
tenacity = "8.0.1"
terminado = "0.12.1"
testpath = "0.5.0"
textwrap3 = "0.9.2"
threadpoolctl = "3.0.0"
tomli = "1.2.3"
tomlkit = "0.11.6"
tornado = "6.1"
tqdm = "4.62.3"
traitlets = "5.1.1"
typing-extensions = "4.5.0"
tzdata = "2023.3"
urllib3 = "1.26.7"
uvicorn = "0.17.5"
vim-vint = "0.3.21"
virtualenv = "20.20.0"
wcwidth = "0.2.5"
webencodings = "0.5.1"
websocket-client = "1.2.3"
wrapt = "1.15.0"
xgboost = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
